@@ -1,0 +1,7 @@
+<?php
+
+class Home extends TPage
+{
+}
+
+?>
