@@ -32,6 +32,7 @@ NEW: Added TKeyboard (Qiang)
 NEW: Added TCaptcha and TCaptchaValidator (Qiang)
 NEW: Added TCachePageStatePersister (Qiang)
 NEW: Added TSlider (Christophe)
+NEW: Added TConditional (Qiang)
 NEW: Added Indonesian translation to QuickStart, requirements and error messages (Zaenal Mutaqin)
 NEW: Added French translation to the blog tutorial (Eric Marchetti)
 
